fix broken css

--- a/all.css
+++ b/all.css
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'Titillium Web Bold';
-  src:url('fonts/TitilliumWeb-Bold.ttf') format('truetype');
+  src:url('_fonts/TitilliumWeb-Bold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Open Sans';
-  src:url('fonts/OpenSans-Regular.ttf') format('truetype');
+  src:url('_fonts/OpenSans-Regular.ttf') format('truetype');
 }
 
 body {
@@ -19,7 +19,7 @@ body {
 .slide {
   position: relative !important;
   background-color: #fff; /* color of the actual slide */
-  width: 85%; !important;
+  /* width: 85%; !important; */
   border-radius: 5px;
 }
 
